--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+.heading{
+  text-align: center;
+  font-weight: bold;
+  color:steelblue;
+}
 .search-field {
   border: none;
   border-radius: 50px;
@@ -14,21 +19,19 @@ body {
 }
 .search-box {
   border: 1px solid rgb(3, 118, 211);
-  width: 281px;
+  width: 50%;
   border-radius: 5px;
-  margin: auto;
+  margin: auto ;
   margin-top: 50px;
-  border-right: none;
+  margin-bottom: 50px;
 }
 .search-button {
   padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
+  margin-left: 413px;
 }
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
   text-align: center;
   width: 100%;
   margin: auto;
@@ -50,7 +53,6 @@ body {
 }
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
@@ -60,6 +62,12 @@ body {
 .cart-main {
   padding-right: 30px;
 }
+/* rating part */
+.rating{
+  font-weight: bold;
+  color : rgb(253, 72, 97)
+}
+/* responsive part */
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
