--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
+/* -----------common styles or utilities------- */
+*{
+  margin: 0;
+  padding : 0;
+}
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  width: 100%;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
-}
-.search-field:hover {
-  outline: none;
-  border: none;
-}
+/*------------ products-------------- */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+  grid-gap: 30px;
   text-align: center;
   width: 100%;
   margin: auto;
@@ -24,6 +21,7 @@ body {
 .single-product {
   background-color: rgb(197, 197, 197);
   height: 100%;
+  border-radius: 10px;
   padding: 10px;
   transition: 0.6s;
 }
@@ -36,6 +34,7 @@ body {
   width: 150px;
   height: 150px;
 }
+/* ----------------My cart part ---------*/
 .cart {
   width: 350px;
   padding: 10px;
@@ -47,29 +46,14 @@ body {
 .cart-main {
   padding-right: 30px;
 }
-/* rating part */
-.rating{
-  color : rgb(40, 185, 96)
-}
-/* responsive part */
+/* ------------responsive part --------*/
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
-  .cart {
-    width: 300px;
-    /* border: 1px solid green; */
-    padding: 10px;
-    box-shadow: 10px 10px 20px gray;
-    border-radius: 5px;
-    margin-right: 30px;
-    position: fixed;
-  }
-  .cart-main {
-    padding-right: 10px;
-  }
 }
+/* ---------responsive min device---------*/
 @media only screen and (max-width: 468px) {
   #all-products {
     display: grid;
